Code clean
update to getFirst
get uuid via non deprecated method
consistent line continuation indentation
add some javaDoc